--- a/style.css
+++ b/style.css
@@ -44,12 +44,24 @@ body{
 }
 
 .tails{
-    transform: rotateX(100deg);
+    transform: rotateX(180deg);
 }
 
 .buttons{
     display: flex;
     justify-content: space-between;
+}
+
+.coin img{
+    width: 145px;
+}
+
+.heads, .tails{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
 }
 
 button{
